# wikipepub

./: LICENSE  Main.hs  Procfile  README.md  scotty-wpub.cabal  wikipepub.cabal
QNDA/: Counter.hs  HtmlReader.hs  ImageReader.hs  MathReader.hs  MetaInformation.hs  Toc.hs  WriteEPUB.hs
Wpub/: GetImage.hs  GetImage.hs~  ReadMediaWiki.hs  WikipediaToHTML.hs  WikipediaToHTML.hs~
public/: index.html
public/css/: epub.css
public/js/: waitmessage.js
