name:                wikipepub
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Keiichiro Shikano
maintainer:          k16.shikano@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.20

executable wikipepub
  main-is:             Main.hs
  other-extensions:    FlexibleContexts
                     , OverloadedStrings
                     , Arrows
  build-depends:       base >=4.7 && <4.8
                     , parsec >= 3.1.9
                     , directory
                     , filepath
                     , containers
                     , process
                     , bytestring >= 0.9
                     , utf8-string >= 1.0.1.1
                     , old-locale
                     , hashable
                     , MissingH
                     , zip-archive
                     , HTTP
                     , http-conduit
                     , transformers
                     , mtl
                     , hxt >= 9.3.1.15
                     , hxt-curl
                     , scotty >= 0.10.2
                     , text
                     , blaze-html
                     , wai-middleware-static
                     , time
  hs-source-dirs:      .
  default-language:    Haskell2010
